--- a/style.css
+++ b/style.css
@@ -20,14 +20,16 @@ body {
    /* animation: 1s ease-out var(--delay) 1 transitionAnimation; /* duration/timing-function/delay/iterations/name */
     /* animation-fill-mode: forwards; */
     /* background-repeat: no-repeat; */
-    background-position: bottom;
+    /* background-position: bottom; */
     /* animation: name duration timing-function delay iteration-count direction fill-mode; */
     /* background-size: ; */
     position: relative;
 }
 #video-background {
     position: absolute;
+    top: 40px;
     width: 100%;
+    height: 100%;
     bottom:  0;
     /* min-width: 100%;
     min-height: 100%; */
