--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     padding: 0;
     min-height: 100vh;
     font-family: var(--font);
+    background-color: #eff0e6;
     /* background: radial-gradient(ellipse at bottom, var(--bgColor) 0%, var(--bgColor2) 100%); */
     /* background: url('advert_updated.mp4'); */
     /* background-color: #090a0f; */
@@ -27,7 +28,7 @@ body {
 }
 #video-background {
     position: absolute;
-    top: 40px;
+    /* top: 40px; */
     width: 100%;
     height: 100%;
     bottom:  0;
